fix:div alignment

--- a/css/detalhesAnuncio.css
+++ b/css/detalhesAnuncio.css
@@ -13,7 +13,7 @@ body {
 main {
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
-    width: 70%;
+    width: 90%;
     margin: auto;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -22,37 +22,45 @@ main {
     padding: 30px 30px 40px 30px;
 }
 
-#slider{
-    width: 30%;
-    height: 30%;
-    margin-right: 50px;
-}
-
-#notebookImg{
-    max-width: 100%;
-    width: 100%;
-    height: 400px;
-    object-fit: contain;
-}
-
 #div1{
-    margin:  20px;
-    display: flex;
     border-style: none none solid none;
     border-color: rgba(117, 117, 117, 0.299);
     border-width: 1px;
 }
 
-#descricao{
-    width:  30%;
+#div2{
+    margin-top: 20px;
+    border-radius: 10px;
+    padding: 30px;
+    background-color: rgba(168, 158, 158, 0.137);
+}
+
+#slider{
     height: 400px;
     margin-right: 50px;
+    display: inline-block;
+    width: 33%;
+}
+
+#notebookImg{
+    max-width: 90%;
+    width: 90%;
+    height: 400px;
+    object-fit: contain;
+}
+
+#descricao{
+    width: 33%;
+    height: 400px;
+    display: inline-block;
+    overflow: hidden;
 }
 
 #preco{
-    width: 30%;
+    width: 20%;
     height: 400px;
-    text-align: center;
+    display: inline-block;
+    overflow: hidden;
 }
 
 #inf{
@@ -61,13 +69,10 @@ main {
 
 li{
     margin-top: 15px;
-    
 }
 
 .btn{
     display: block;
-    margin-right: auto;
-    margin-left: auto;
     width: 70%;
     height: 50px;
     color: #fff;
